# memory-game

./: .env.cmake.example  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/: libsdlActivity.java
android/app/src/main/res/values/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
rc/: app.rc
src/: App.c  App.h  main.c  sources.cmake
src/base/: Box.c  Box.h  Button.c  Button.h  DataZipFile.c  DataZipFile.h  Graphics.c  Graphics.h  LinkedList.c  LinkedList.h  Rectangle.c  Rectangle.h  SceneManager.c  SceneManager.h  Texture.c  Texture.h  Window.c  Window.h
src/base/private/: Timer.c  Timer.h
src/scene_game/: Footer.c  Footer.h  GameBoard.c  GameBoard.h  Header.c  Header.h  SceneGame.c  SceneGame.h  SceneGameRect.h  Sidebar.c  Sidebar.h
